--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.2",
+    "leaflet": "^1.9.4",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "1.4.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.25.0"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.25.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
