--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -17,7 +18,9 @@
     "@material-tailwind/react": "^2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "leaflet": "^1.9.4",
+    "path": "^0.12.7",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
     "react-apexcharts": "1.4.1",
