--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "prettier-plugin-tailwindcss": "0.5.6",
     "tailwindcss": "3.3.4",
     "vite": "4.5.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
