--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apexcharts": "3.44.0",
     "axios": "^1.7.2",
     "express": "^4.19.2",
+    "firebase": "^10.12.4",
     "leaflet": "^1.9.4",
     "path": "^0.12.7",
     "prop-types": "15.8.1",
@@ -26,6 +27,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.0",
     "react-table": "^7.8.0"
   },
