--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "leaflet": "^1.9.4",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
     "path": "^0.12.7",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
