--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/react": "^2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "leaflet": "^1.9.4",
