--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "http-proxy-middleware": "^3.0.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
