--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
