--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "apexcharts": "3.44.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "http-proxy-middleware": "^3.0.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.4",
     "path": "^0.12.7",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
