--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "prop-types": "15.8.1",
     "react": "^18.3.1",
